--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -18,3 +18,25 @@
     <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
   </div>
 </ion-content>
+
+
+
+ <ion-footer>
+  <h4>ll</h4>
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button routerLink="/admin">
+        <ion-icon name="person-circle"></ion-icon>
+        <ion-label>Home</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button routerLink="/admin">
+        <ion-icon name="person-circle"></ion-icon>
+        <ion-label>Admin</ion-label>
+      </ion-tab-button>
+
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-footer>
+
+
