pantalla-con-iconos

--- a/src/app/reg-tienda/reg-tienda.page.html
+++ b/src/app/reg-tienda/reg-tienda.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>MAPA TU-WEKA</ion-title>
+    <ion-title>REGISTRO DE TIENDA</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <div #map id="map"></div>
-</ion-content>
+<ion-content>
 
+</ion-content>
 <ion-footer color="primary">
   <h4>ll</h4>
   <ion-tabs>
@@ -35,4 +34,3 @@
     </ion-tab-bar>
   </ion-tabs>
 </ion-footer>
-<!--santy lema-->
