--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -5,6 +5,7 @@
 </ion-header>
 
 <ion-content>
+
   <form>
     <ion-item lines="full">
       <ion-label position="floating">Correo electronico</ion-label>
@@ -19,11 +20,10 @@
         <ion-button type="submit" (click)="onLogin(email, password)" expand="block">Iniciar sesión</ion-button>
       </ion-col>
     </ion-row>
-  
+
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" (click)="onLoginGoogle()" expand="block"
-          >Iniciar sesión con Google
+        <ion-button type="submit" color="danger" (click)="onLoginGoogle()" expand="block">Iniciar sesión con Google
         </ion-button>
       </ion-col>
     </ion-row>
@@ -35,7 +35,7 @@
       </p>
     </ion-col>
   </ion-row>
-  
+
   <ion-row>
     <ion-col>
       <p class="ion-text-end">
