--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,6 +6,12 @@
 
 <ion-content>
 
+
+    <div class="container ion-text-center">
+      <img src="assets/logo-weka_auto.png">
+    </div>
+  <br><br>
+
   <form>
     <ion-item lines="full">
       <ion-label position="floating">Correo electronico</ion-label>
