Implementacion tema oscuro 01

--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,5 +1,11 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="end">
+      <ion-icon color="secondary" (click)="openMenu()" style="font-size: 30px;" name="settings-outline"></ion-icon>
+      
+      <!-- DAVID MORALES -->
+      <!--<ion-menu-button autoHide="false"></ion-menu-button>-->
+    </ion-buttons>
     <ion-title>MAPA TU-WEKA</ion-title>
   </ion-toolbar>
 </ion-header>
