splash-logo-nuevo-fuente

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,7 +8,7 @@
 
 
   <div class="container ion-text-center">
-    <img src="assets/logo-weka_auto.png">
+    <img src="assets/logoO-nuevo.png">
   </div>
   <br><br>
 
