--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -2,6 +2,6 @@
 
 <ion-content>
   <div class="container ion-text-center">
-    <img src="assets/logo-weka_auto.png">
+    <img src="assets/logoOriginal.jpeg">
   </div>
 </ion-content>
