--- a/src/app/reg-tienda/reg-tienda.page.html
+++ b/src/app/reg-tienda/reg-tienda.page.html
@@ -5,7 +5,16 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-item lines="full">
+    <ion-label position="floating">Contraseña</ion-label>
+    <ion-input type="text" #password required clearInput value=""></ion-input>
+  </ion-item>
+  <br><br>
+  <ion-row > 
+    <ion-col>
+      <ion-button type="submit" expand="block" >Iniciar sesión</ion-button>
+    </ion-col>
+  </ion-row>
 </ion-content>
 <ion-footer color="primary">
   <h4>ll</h4>
