--- a/src/app/reg-tienda/reg-tienda.page.html
+++ b/src/app/reg-tienda/reg-tienda.page.html
@@ -6,13 +6,13 @@
 
 <ion-content>
   <ion-item lines="full">
-    <ion-label position="floating">Contraseña</ion-label>
-    <ion-input type="text" #password required clearInput value=""></ion-input>
+    <ion-label position="floating">Nombre de la tienda</ion-label>
+    <ion-input type="text" #nameTienda required clearInput value=""></ion-input>
   </ion-item>
   <br><br>
   <ion-row > 
     <ion-col>
-      <ion-button type="submit" expand="block" >Iniciar sesión</ion-button>
+      <ion-button type="submit" (click)="guardarTienda(nameTienda)"  expand="block" >Guardar</ion-button>
     </ion-col>
   </ion-row>
 </ion-content>
