--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,11 @@
         </ion-item>
 
       </ion-list>
+
+     
+        <ion-icon name="map-outline"></ion-icon>
+        <ion-label>{{ correo() }}</ion-label>
+    
       <br>
       <ion-item routerLink="/admin" detail>
         <ion-icon name="map-outline"></ion-icon>
