--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,11 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
+      <ion-item >
+        <ion-icon name="person-outline"></ion-icon>
+        <ion-label>{{ correo() }}</ion-label>
+      </ion-item>
+      <br>
       <ion-list>
         <ion-item>
           <ion-item>
@@ -14,13 +19,8 @@
             <ion-toggle slot="end" (ionChange)="cambio()"></ion-toggle>
           </ion-item>
         </ion-item>
-
       </ion-list>
 
-     
-        <ion-icon name="map-outline"></ion-icon>
-        <ion-label>{{ correo() }}</ion-label>
-    
       <br>
       <ion-item routerLink="/admin" detail>
         <ion-icon name="map-outline"></ion-icon>
