--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -1,12 +1,12 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header [translucent]="true" color="primary">
+  <ion-toolbar color="primary">
     <ion-buttons slot="end">
-      <ion-icon color="secondary" (click)="openMenu()" style="font-size: 30px;" name="settings-outline"></ion-icon>
+      <ion-icon color="light" (click)="openMenu()" style="font-size: 30px;" name="settings-outline"></ion-icon>
       
       <!-- DAVID MORALES -->
       <!--<ion-menu-button autoHide="false"></ion-menu-button>-->
-    </ion-buttons>
-    <ion-title>MAPA TU-WEKA</ion-title>
+    </ion-buttons >
+    <ion-title color="light" >MAPA TU-WEKA</ion-title>
   </ion-toolbar>
 </ion-header>
 
