--- a/src/app/reg-tienda/reg-tienda.page.html
+++ b/src/app/reg-tienda/reg-tienda.page.html
@@ -1,12 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>REGISTRO DE TIENDA</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title color="light">REGISTRO DE TIENDA</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-item lines="full">
-    <ion-label position="floating">Nombre de la tienda</ion-label>
+    <ion-label color="secondary"position="floating">Nombre de la tienda</ion-label>
     <ion-input type="text" #nameTienda required clearInput value=""></ion-input>
   </ion-item>
   <br><br>
@@ -21,23 +21,23 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button routerLink="/admin">
-        <ion-icon name="map-outline"></ion-icon>
-        <ion-label>Mapa</ion-label>
+        <ion-icon color="primary"name="map-outline"></ion-icon>
+        <ion-label color="primary">Mapa</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/reg-tienda">
-        <ion-icon name="storefront-outline"></ion-icon>
-        <ion-label>Reg-tienda</ion-label>
+        <ion-icon color="primary"name="storefront-outline"></ion-icon>
+        <ion-label color="primary">Reg-tienda</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/anuncios">
-        <ion-icon name="star-outline"></ion-icon>
-        <ion-label>Anuncios</ion-label>
+        <ion-icon color="primary"name="star-outline"></ion-icon>
+        <ion-label color="primary">Anuncios</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/login">
-        <ion-icon name="exit-outline"></ion-icon>
-        <ion-label>Salir</ion-label>
+        <ion-icon color="primary" name="exit-outline"></ion-icon>
+        <ion-label color="primary" >Salir</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
