Ultimo Cambio Colores - Letras

--- a/src/app/admin/admin.page.scss
+++ b/src/app/admin/admin.page.scss
@@ -51,11 +51,11 @@
 //PRINCIPALES
 
 @font-face{ 
-  font-family: principalF;
-  src: url("/../../assets/fonts/principalF.woff2");
+  font-family: principalA;
+  src: url("/../../assets/fonts/principalA.woff2");
 }
 ion-title{
-  font-family: "principalF"!important;
+  font-family: "principalA"!important;
 }
 
 //SECUNDARIOS
