--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <ion-app>
   <ion-menu side="end" menuId="custom" contentId="main" class="my-custom-menu">
     <ion-header>
-      <ion-toolbar color="secondary">
+      <ion-toolbar color="primary">
         <ion-title>CONFIGURACIÓN APP</ion-title>
       </ion-toolbar>
     </ion-header>
@@ -23,18 +23,18 @@
 
       <br>
       <ion-item routerLink="/admin" detail>
-        <ion-icon color="primary" name="map-outline"></ion-icon>
-        <ion-label> MAPA</ion-label>
+        <ion-icon  name="map-outline"></ion-icon>
+        <ion-label color="primary" > MAPA</ion-label>
       </ion-item>
       <br>
       <ion-item routerLink="/anuncios" detail>
-        <ion-icon color="primary" name="star-outline"></ion-icon>
-        <ion-label> ANUNCIOS</ion-label>
+        <ion-icon name="star-outline"></ion-icon>
+        <ion-label color="primary"> ANUNCIOS</ion-label>
       </ion-item>
       <br>
       <ion-item routerLink="/login" detail>
-        <ion-icon color="primary" name="exit-outline"></ion-icon>
-        <ion-label> SALIR</ion-label>
+        <ion-icon  name="exit-outline"></ion-icon>
+        <ion-label  color="primary"> SALIR</ion-label>
       </ion-item>
     </ion-content>
   </ion-menu>
