--- a/src/app/reg-tienda/reg-tienda.page.html
+++ b/src/app/reg-tienda/reg-tienda.page.html
@@ -21,23 +21,23 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button routerLink="/admin">
-        <ion-icon color="primary"name="map-outline"></ion-icon>
-        <ion-label color="primary">Mapa</ion-label>
+        <ion-icon name="map-outline"></ion-icon>
+        <ion-label >Mapa</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/reg-tienda">
-        <ion-icon color="primary"name="storefront-outline"></ion-icon>
-        <ion-label color="primary">Reg-tienda</ion-label>
+        <ion-icon name="storefront-outline"></ion-icon>
+        <ion-label >Reg-tienda</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/anuncios">
-        <ion-icon color="primary"name="star-outline"></ion-icon>
-        <ion-label color="primary">Anuncios</ion-label>
+        <ion-icon name="star-outline"></ion-icon>
+        <ion-label >Anuncios</ion-label>
       </ion-tab-button>
 
       <ion-tab-button routerLink="/login">
-        <ion-icon color="primary" name="exit-outline"></ion-icon>
-        <ion-label color="primary" >Salir</ion-label>
+        <ion-icon  name="exit-outline"></ion-icon>
+        <ion-label >Salir</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
