--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -263,7 +263,7 @@
    /** primary **/
    --ion-color-primary: #05ada2;
    --ion-color-primary-rgb: 5,173,162;
-   --ion-color-primary-contrast: #ffffff;
+   --ion-color-primary-contrast:#000000;
    --ion-color-primary-contrast-rgb: 255,255,255;
    --ion-color-primary-shade: #04988f;
    --ion-color-primary-tint: #1eb5ab;
@@ -279,7 +279,7 @@
 
   --ion-color-tertiary: #6a64ff;
   --ion-color-tertiary-rgb: 106,100,255;
-  --ion-color-tertiary-contrast: #ffffff;
+  --ion-color-tertiary-contrast: #000000;
   --ion-color-tertiary-contrast-rgb: 255,255,255;
   --ion-color-tertiary-shade: #5d58e0;
   --ion-color-tertiary-tint: #7974ff;
@@ -300,17 +300,17 @@
 
   --ion-color-danger: #ff4961;
   --ion-color-danger-rgb: 255,73,97;
-  --ion-color-danger-contrast: #ffffff;
+  --ion-color-danger-contrast:#000000;
   --ion-color-danger-contrast-rgb: 255,255,255;
   --ion-color-danger-shade: #e04055;
   --ion-color-danger-tint: #ff5b71;
 
-  --ion-color-dark: #f4f5f8;
+  --ion-color-dark: #000000;
   --ion-color-dark-rgb: 244,245,248;
   --ion-color-dark-contrast: #000000;
   --ion-color-dark-contrast-rgb: 0,0,0;
   --ion-color-dark-shade: #d7d8da;
-  --ion-color-dark-tint: #f5f6f9;
+  --ion-color-dark-tint: #000000;
 
   --ion-color-medium: #989aa2;
   --ion-color-medium-rgb: 152,154,162;
@@ -321,7 +321,7 @@
 
   --ion-color-light: #222428;
   --ion-color-light-rgb: 34,36,40;
-  --ion-color-light-contrast: #ffffff;
+  --ion-color-light-contrast:#000000;
   --ion-color-light-contrast-rgb: 255,255,255;
   --ion-color-light-shade: #1e2023;
   --ion-color-light-tint: #383a3e;
@@ -336,7 +336,7 @@
   --ion-background-color: #000000;
   --ion-background-color-rgb: 0,0,0;
 
-  --ion-text-color: #ffffff;
+  --ion-text-color:#000000;
   --ion-text-color-rgb: 255,255,255;
 
   --ion-color-step-50: #0d0d0d;
@@ -376,7 +376,7 @@
   --ion-background-color: #121212;
   --ion-background-color-rgb: 18,18,18;
 
-  --ion-text-color: #ffffff;
+  --ion-text-color:#000000;
   --ion-text-color-rgb: 255,255,255;
 
   --ion-border-color: #222222;
